# spark-streaming

./: .flake8  MakeFile  Makefile  docker-compose-framework.yaml  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml
docker/: pom.xml
docker/aws/: Dockerfile  provision-localstack.sh
docker/aws/infrastructure/: cfn-streaming-service.yaml
docker/glue/: Dockerfile
docker/glue_integrater/: Dockerfile  config.py  package.sh  run_upload.py
docker/glue_integrater/aws/: athena.py  connection.py  glue.py  storage.py
docker/make/: setup.mk  variables.mk
docker/postgres/: Dockerfile
docker/postgres/init/: init-user-db.sh
infrastructure/: _provider.tf  _variables.tf  _versions.tf  athena  cloudwatch.tf  cloudwatch_alerts  glue_connection.tf  glue_consumer.tf  glue_consumer_alerts.tf  glue_producer.tf  iam.tf  iam_policy.tf  parameter_store.tf  s3.tf
infrastructure/ap-southeast-2/production/: backend  terraform.tfvars
infrastructure/ap-southeast-2/staging/: backend  terraform.tfvars
infrastructure/eu-west-1/production/: backend  terraform.tfvars
infrastructure/eu-west-1/staging/: backend  planfile  terraform.tfvars
infrastructure/modules/cloudwatch/: cloudwatch.tf
infrastructure/modules/datadog_alert/: datadog.tf  variables.tf
infrastructure/modules/glue/: glue.tf  output.tf  variables.tf
infrastructure/modules/iam/: main.tf
infrastructure/modules/parameter_store/: main.tf  variables.tf
infrastructure/modules/s3/: s3.tf  variables.tf
infrastructure/us-east-1/production/: backend  terraform.tfvars
infrastructure/us-east-1/staging/: backend  terraform.tfvars
jobs/: backfill.py  consumer.py  producer.py
jobs/assets/: spark_conf.yaml  spark_producer_conf.yaml
jobs/assets/consumer/: backfill_eu.yaml
jobs/assets/producer/: ack_eu.yaml
jobs/common/: yaml.py
jobs/common/aws/: connection.py  ssm.py  storage.py
jobs/common/schema_registry/: schema_retriver.py
jobs/common/stream/: batch.py  iceberg_resolver.py  kafka_resolver.py  stream.py
jobs/common/transformation/: acknowledgement.py  avro_resolver.py  json_resolver.py  utils.py
notebook/: Dockerfile
